# cloud-rag

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  justfile
docs/: README.md  contracts.md  deployment-path.md  frontend-handoff.md
env/: local.env.example  production.env.example  staging.env.example
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/app/: providers.tsx
frontend/src/components/: app-shell.tsx  citations-list.tsx  empty-state.tsx  health-panel.tsx  ingest-form.tsx  ingest-history.tsx  (+3 more)
frontend/tests/: ingest.test.tsx  query.test.tsx  smoke.test.mjs
gateway/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
gateway/src/: config.ts  contracts.ts  index.ts
gateway/tests/: app.test.ts  smoke.test.mjs
infra/: README.md
infra/scripts/: health-check.sh
plans/: intent.md  library-decisions.md  overview.md
plans/phases/: 00-roadmap.md  01-repository-foundation.md  02-local-infrastructure-runtime.md  03-gateway-api-and-queue-contracts.md  04-worker-ingestion-pipeline.md  05-retrieval-and-semantic-cache.md  06-frontend-product-experience.md  07-observability-reliability-testing.md  08-serverless-ready-deployment-path.md
workers/: Dockerfile  README.md  pyproject.toml
workers/src/cloudrag_workers.egg-info/: PKG-INFO  SOURCES.txt
workers/src/workers/: __init__.py  __main__.py  answering.py  cache.py  chunking.py  container.py  contracts.py  embeddings.py  hashing.py  llm_utils.py  logging.py  queue_worker.py  services.py  settings.py  storage.py  telemetry.py  vector_store.py
workers/tests/: test_pipeline.py  test_provider_adapters.py  test_smoke.py
(+18 files in other folders)
