[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudrag-workers"
version = "0.1.0"
description = "CloudRAG Python workers"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.39.0",
  "bullmq>=2.16.1",
  "httpx>=0.28.1",
  "litellm>=1.79.0",
  "opentelemetry-api>=1.38.0",
  "opentelemetry-sdk>=1.38.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.11.0",
  "redis>=6.4.0",
  "structlog>=25.4.0",
]

[dependency-groups]
dev = [
  "black>=24.10.0",
  "isort>=5.13.2",
  "mypy>=1.13.0",
  "pytest-asyncio>=1.2.0",
  "pytest>=8.3.3",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
